fixed the overlap of text and icon by increasing the padding from the right side to 36px

--- a/modules/st2-auto-form/style.css
+++ b/modules/st2-auto-form/style.css
@@ -115,7 +115,6 @@
         -moz-box-sizing: border-box;
               box-sizing: border-box;
       width: 100%;
-      padding: 0 12px;
 
       color: black;
       border: none;
@@ -189,7 +188,7 @@
     overflow-x: hidden;
     overflow-y: scroll;
 
-    padding: 9px 12px;
+    padding: 9px 36px 9px 9px;
 
     resize: none;
     cursor: text;
